Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5536

Analyzer should report missing QML Observer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Qt Creator 2.3.0
    • QML Profiler
    • None
    • Windows Vista x64
    • 409ed3b275059b31257cee02ff271af0efa6c55a

    Description

      When trying to debug a QML project, Creator will show a warning if the QML Observer is missing, see screenshot. When trying to run it in Analyzer, Creator will not complain but just do nothing. It should a warning in this situation, too.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            cjanssen Christiaan Janssen (Inactive)
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes