QmlProfiler: show warning when no observer is present

Task-number: QTCREATORBUG-5536
Change-Id: I2cd1e62f78af3b1b18a3e318ad29ee0343c48b29
Reviewed-on: http://codereview.qt.nokia.com/1930
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Kai Koehne <kai.koehne@nokia.com>